# pydbt

./: .gitignore  README.md  pyproject.toml
examples/jaffle_shop/models/: your_first_model.sql
examples/jaffle_shop/pydbt/: .env.example  your_first_model.py
src/pydbt/: __init__.py  cli.py  config.py  core.py  testing.py
src/pydbt/templates/: test_your_first_model.py  your_first_model.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
